[package]
name = "rabbit_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.3"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde      ={ version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
